deploy/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e2e-testing-manager-api
  namespace: test-e2e
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e2e-testing-manager-api
  template:
    metadata:
      labels:
        app: e2e-testing-manager-api
    spec:
      imagePullSecrets:
        - name: nexus-docker-registry-credentials
      containers:
        - name: e2e-testing-manager-api
          image: nexus.itsf.io:5005/galaxion/e2e-testing-manager:0.5.0
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: "2"
              memory: "2048Mi"
            requests:
              cpu: "1"
              memory: "1024Mi"
